--- a/templates/Thirdparty.html
+++ b/templates/Thirdparty.html
@@ -73,6 +73,7 @@
 	<!-- xmlhttp.open("GET",url,true); -->
 	<!-- xmlhttp.send(); -->
 <!-- } -->
+<!-- 废除订单用 -->
 function nullify(formtype,obj_id)
 {
 $.ajax({
@@ -159,6 +160,7 @@ $.ajax({
 	xmlhttp.open("GET",url,true);
 	xmlhttp.send();
 } {% endcomment %}
+<!-- 接单用 -->
 function take(obj_id)
 {
 $.ajax({
